MDEV-20808 CAST from INET6 to FLOAT does not produce an error